# callimachus

./: .dockerignore  .gitignore  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  SIGNING.md  biome.json  glama.json  package.json  pnpm-lock.yaml  server.json  turbo.json
.changeset/: README.md  activation-onboarding.md  agent-session-snapshots.md  ask-and-file-search.md  auto-distillation.md  auto-update.md  cal-audit-pr.md  chat-cli-streaming.md  chat-prompt-auditpr-issues-mcp.md  chat-shadcn-conversation-ui.md  cli-binaries-and-extension-hardening.md  cli-llm-backend.md  coach-dashboard.md  codebase-hardening.md  config.json  copilot-vscode-chat-indexer.md  db-perf-readpool.md  decision-contradiction-guard.md  duplicate-work-guard.md  embed-giant-message-stall.md  embed-perf.md  extension-needs-cal.md  fix-scrollbar-theme.md  fix-windows-paths.md  git-linked-commits.md  incremental-indexing.md  indexing-progress-locks.md  keychain-deny-loop.md  knowledge-distillation.md  knowledge-recall.md  knowledge-todos.md  major-memes-prove.md  memory-curation.md  multi-cli-sources-and-tooling.md  native-tls.md  nine-agents-recall-and-cli.md  opencode-sqlite-support.md  per-thread-result-cap.md  proactive-recall-hook.md  project-memory.md  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  publish-extension.yml  version.yml
apps/desktop/: CHANGELOG.md  index.html  package.json
apps/desktop/public/: splashscreen.html
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.callimachus/: memory.md
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_subagent.sql  0003_embeddings.sql  0004_vec0.sql  0005_gemini.sql  0006_more_sources.sql  0007_cline_forks.sql  0008_embed_flag.sql  0009_thread_bytes.sql  0010_stars_tags.sql  0011_knowledge.sql  0012_knowledge_llm.sql  0013_file_mentions.sql  0014_perf.sql  0015_fact_curation.sql  0016_project_key.sql  0017_messages_ts.sql  0018_distillable_count.sql  0019_snapshots.sql  0020_decision_rationale.sql  0021_thread_commits.sql  0022_message_usage.sql  0023_thread_commits_sha_idx.sql  0024_copilot.sql
apps/desktop/src-tauri/resources/recall/: SKILL.md
apps/desktop/src-tauri/src/: cleanup.rs  cli.rs  cli_core.rs  context.rs  cost.rs  error.rs  export.rs  gitlink.rs  integration.rs  issues.rs  lib.rs  main.rs  mcp.rs  mcp_server.rs  secrets.rs  snapshot.rs
apps/desktop/src-tauri/src/agent/: cli_resume.rs  mod.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs
apps/desktop/src-tauri/src/embed/: mod.rs
apps/desktop/src-tauri/src/indexer/: README.md  claude.rs  cline.rs  codex.rs  continue_cli.rs  copilot.rs  cursor.rs  gemini.rs  goose.rs  kilo.rs  mod.rs  opencode.rs  qwen.rs  roo.rs  watcher.rs
apps/desktop/src-tauri/src/knowledge/: mod.rs
apps/desktop/src-tauri/src/search/: mod.rs
apps/desktop/src/components/: AskView.tsx  ChatSidebar.tsx  ChatView.tsx  CleanupCard.tsx  CoachView.tsx  CommandPalette.tsx  KnowledgeGate.tsx  KnowledgeSection.tsx  KnowledgeView.tsx  Loading.tsx  Markdown.tsx  Onboarding.tsx  ProjectMemoryView.tsx  ResultsList.tsx  SearchBar.tsx  SettingsView.tsx  StatsView.tsx  TagsEditor.tsx  ThreadView.tsx  TodosView.tsx  UpdateBanner.tsx
apps/desktop/src/components/ui/: attachment.tsx  bubble.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  marker.tsx  message-scroller.tsx  progress.tsx  scroll-area.tsx  sheet.tsx  table.tsx
apps/desktop/src/lib/: api.ts  errors.ts  form.tsx  format.ts  models.ts  platform.ts
apps/desktop/src/store/: chat.ts  settings.ts  theme.ts  ui.ts
apps/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json  tsconfig.webview.json  vite.webview.config.ts
apps/vscode/src/: actions.ts  cal.ts  editorContext.ts  extension.ts  protocol.ts  sidebarProvider.ts  threadPanel.ts  tree.ts  webviewHtml.ts  webviewMessages.ts
apps/vscode/src/webview/: SidebarApp.tsx  ThreadApp.tsx  bridge.ts  index.css  main.tsx  transcript.ts
apps/web/: README.md  package.json  tsconfig.json  vite.config.ts
apps/web/public/: site.webmanifest
apps/web/public/screenshots/: CAPTURE.md
apps/web/src/: routeTree.gen.ts  router.tsx
apps/web/src/components/download/: DownloadButton.tsx  DownloadMatrix.tsx
apps/web/src/components/site/: CommandBlock.tsx  Container.tsx  FeaturePanel.tsx  Footer.tsx  Header.tsx  LegalPage.tsx  Logo.tsx  NotFound.tsx  ProductLayout.tsx  ScreenshotGallery.tsx  Section.tsx  SourceMarquee.tsx  icons.tsx
apps/web/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  item.tsx
apps/web/src/content/: faq.ts  legal.ts  screenshots.ts
apps/web/src/lib/: jsonld.ts  os-detect.ts  seo.ts  site.ts
apps/web/src/routes/: __root.tsx  cli.tsx  desktop.tsx  download.tsx  index.tsx  mcp.tsx  pricing.tsx  privacy.tsx  robots[.]txt.ts  sitemap[.]xml.ts  terms.tsx  vscode.tsx
apps/web/src/server/: releases.ts
apps/web/src/styles/: app.css
assets/: callimachus-signing-public.asc
scripts/: release-tag.mjs  sync-versions.mjs
