[package]
name = "callimachus"
version = "0.7.0"
description = "Local index & search for AI agent threads"
authors = ["Ari Shaller"]
license = "AGPL-3.0-or-later"
edition = "2021"
# Two binaries (the app + the MCP server); make `cargo run` (tauri dev) pick the app.
default-run = "callimachus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "callimachus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone MCP server: exposes the index as tools for any LLM/agent over stdio.
[[bin]]
name = "callimachus-mcp"
path = "src/mcp.rs"

# Companion terminal CLI: search / read indexed threads from the shell.
[[bin]]
name = "cal"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# native-tls (OS TLS), NOT rustls: rustls pulls aws-lc-sys/ring, which need libclang_rt.osx.a
# at link time — absent in recent macos-latest Xcodes. native-tls keeps CI on macos-latest.
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Format-preserving TOML edit for Codex's ~/.codex/config.toml MCP registration.
toml_edit = "0.22"
# Canonical store: bundled SQLite (FTS5 is compiled into the bundled amalgamation).
rusqlite = { version = "0.37", features = ["bundled", "functions"] }
rusqlite_migration = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
fastembed = "5.17.2"
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread", "io-std", "process"] }
futures-util = "0.3.32"
# default-features off: reqwest's `default-tls` is rustls (-> aws-lc-sys/ring -> clang_rt.osx,
# which breaks linking on recent macos-latest Xcodes). Use native-tls + the rest of the defaults.
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "native-tls", "charset", "http2", "system-proxy"] }
# Cross-platform OS credential store: macOS Keychain, Windows Credential Manager,
# Linux Secret Service (pure-Rust zbus + crypto — no system libsecret needed).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
sqlite-vec = "0.1.9"
zerocopy = "0.8.52"
genai = { version = "0.6.5", default-features = false, features = ["native-tls"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
tokio-util = "0.7.18"
r2d2 = "0.8.10"

